# p5py

./: .gitignore  LICENSE  README.md  manage.py  my_uwsgi.ini  pyproject.toml
editor/: admin.py  apps.py  models.py  urls.py  views.py
editor/migrations/: 0001_initial.py
editor/templates/editor/: editor.html
p5py/: README.md  asgi.py  local_settings-example.py  settings.py  urls.py  wsgi.py
static/js/ace/: mode-python3.js
static/js/ace/snippets/: python.js
static/py/: editor.py
