[project]
name = "p5py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Anderson", email = "andersonby@163.com"},
]
dependencies = [
    "django>=5.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
